# meatbase

./: README.md
meatserver/: LICENSE  meatserver.cabal
meatserver/app/: Main.hs
meatserver/src/: EventRecords.hs  Example.hs  MeatApp.hs  Model.hs
meatserver/test/: Spec.hs
