name:                meatserver
version:             0.1.0.0
synopsis:            Client spec server
description:         Please see README.md
homepage:            https://github.com/githubuser/meatserver#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          chad@dataculture.co
copyright:           2016 DataCulture LLC
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example, Model, EventRecords
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , resourcet
                     , wai
                     , wai-extra
                     , bytestring
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , text
                     , classy-prelude-yesod
                     , transformers
                     , cassava
                     , vector
                     , lens
                     , multiset
                     , multimap
                     , containers
                     , resource-pool
  default-language:    Haskell2010

executable meatserver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , meatserver
  default-language:    Haskell2010

test-suite meatserver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , meatserver
                     , hspec
                     , hspec-expectations
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , text
                     , persistent
                     , persistent-sqlite
                     , cassava
                     , vector
                     , lens
                     , time
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chadbrewbaker/meatserver
